# zweig-supermodel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: aggressive.toml  conservative.toml  default.toml
docs/: assumptions.md  data-sources.md  model-rules.md  site.md  thresholds.md
site/: index.html  package-lock.json  package.json
site/src/: App.tsx  charts.tsx  data.ts  styles.css
src/zweig_supermodel/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  data.py  indicators.py  pipeline.py  time.py
tests/: conftest.py  test_backtest.py  test_config_and_data.py  test_dashboard.py  test_indicators.py
