[project]
name = "zweig-supermodel"
version = "0.1.0"
description = "Backtest Martin Zweig's monetary, four percent, and super market timing models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sam Pich" }]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.7",
    "requests>=2.32",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
zweig = "zweig_supermodel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zweig_supermodel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["zweig_supermodel"]
strict = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["requests.*", "typer.*", "rich.*"]
ignore_missing_imports = true
